--- a/07-WebContentFormatting/krakowstyle.css
+++ b/07-WebContentFormatting/krakowstyle.css
@@ -1,29 +1,22 @@
 th {
-    background-color: #0f5427;
-    color: white;
+    background-color: darkgreen;
 }
 
 td {
-    padding: 12px;
-}
-
-table {
+    padding: 10px;
+    border: 5px solid #65BE54;
     border-collapse: collapse;
-    margin: 25px 0;
-    width: 100%;
-    table-layout: fixed;
+    color: #6B00B5;
 }
 
-th:nth-child(1),
-td:nth-child(1) {
+td:hover{
+    background-color: pink;
+}
+
+th :nth-child(1){
     width: 25%;
 }
 
-th:nth-child(4),
-td:nth-child(4) {
+th :nth-child(4){
     width: 40%;
-}
-
-tbody tr:hover {
-    background-color: #f0f0f0;
 }
